Fix mobile display

--- a/tps_game/Views/Game/Snake.cshtml
+++ b/tps_game/Views/Game/Snake.cshtml
@@ -217,6 +217,8 @@
     // On load
     document.addEventListener('DOMContentLoaded', function() {
 
+        gameCanvasContainer.style.width = (gameWidth + 110) + 'px';
+
         bUp.style.width = (gameWidth + 103) + 'px';
         bDown.style.width = (gameWidth + 103) + 'px'
         bLeft.style.height = gameHeight + 'px';
