--- a/tps_game/Views/Game/Snake.cshtml
+++ b/tps_game/Views/Game/Snake.cshtml
@@ -3,8 +3,9 @@
 }
 
 <style>
-    #gameCanvas {
-        border: 1px solid black;
+
+    body {
+        overflow-x: hidden;
     }
 
     #logs {
@@ -12,61 +13,112 @@
         color: white;
     }
 
-    #bLeft {
-        /*margin-right: -4px;*/
+    #buttonContainer {
+        background: rgb(239 68 68);
+        padding: 3px;
+        height: 25vh;
+    }
+
+    #buttonContainer .gameButton {
+        display: inline-block;
+        height: calc(8.34vh - 5px);
+        width: 100%;
+        margin-bottom: 3px;
+        text-align: center;
+    }
+
+    #controlsContainer {
+        background: #1d4ed8;
+        padding: 3px;
+        height: 25vh;
+    }
+
+    #bUp, #bLeft, #bRight, #bDown {
+        position: absolute;
+        height: calc(8.34vh - 3px);
     }
 
     #bUp {
-        position: absolute;
         top: 0;
-        left: 50%;
-        width: 500px;
-        transform: translateX(-50%);
+        left: 0;
+        width: 100%;
     }
 
     #bDown {
-        position: absolute;
         bottom: 0;
-        left: 50%;
-        width: 500px;
-        transform: translateX(-50%);
+        left: 0;
+        width: 100%;
+    }
+
+    #bLeft {
+        top: 50%;
+        left: 25%;
+        transform: translate(-50%, -50%);
+        width: calc(50% - 6px);
     }
 
     #bRight {
-        /*margin-left: -4px;*/
+        top: 50%;
+        left: 75%;
+        transform: translate(-50%, -50%);
+        width: calc(50% - 6px);
+    }
+
+    #gameCanvasContainer {
+        text-align: center;
+        width: 100%;
     }
 </style>
 
-@*<div class="max-w-[500px] mx-auto p-3 text-center">
-    <canvas id="gameCanvas" class="inline-block"></canvas>
-</div>*@
-
-<br />
-
 <!-- GAME -->
-<div id="gameCanvasContainer" class="relative py-[48px] mb-[25px] mx-auto text-center">
+<div id="gameCanvasContainer">
+    <canvas id="gameCanvas" class="inline" tabindex="0"></canvas>
+</div>
 
-    <!-- Left -->
-    <button id="bLeft" class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded" data-move="A">
-        <i class="fa-solid fa-arrow-left"></i>
-    </button>
+<div id="controlsContainer" class="relative w-full">
 
     <!-- Up -->
-    <button id="bUp" class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded" data-move="W">
+    <button id="bUp" class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4" data-move="W">
         <i class="fa-solid fa-arrow-up"></i>
     </button>
 
-    <canvas id="gameCanvas" class="inline-block" style="margin: 0 auto;" tabindex="0"></canvas>
-
-    <!-- Down -->
-    <button id="bDown" class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded" data-move="S">
-        <i class="fa-solid fa-arrow-down"></i>
+    <!-- Left -->
+    <button id="bLeft" class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4" data-move="A">
+        <i class="fa-solid fa-arrow-left"></i>
     </button>
 
     <!-- Right -->
-    <button id="bRight" class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded" data-move="D">
+    <button id="bRight" class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4" data-move="D">
         <i class="fa-solid fa-arrow-right"></i>
     </button>
+
+    <!-- Down -->
+    <button id="bDown" class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4" data-move="S">
+        <i class="fa-solid fa-arrow-down"></i>
+    </button>
+
+</div>
+
+<div id="buttonContainer" class="relative w-full">
+
+    <!-- Restart -->
+    <button class="gameButton bg-red-700 hover:bg-red-400 text-white font-bold py-2 px-4" onclick="location.reload();">
+        <i class="fa-solid fa-repeat"></i>
+    </button>
+
+    <!-- Go back -->
+    <button class="gameButton bg-red-700 hover:bg-red-400 text-white font-bold py-2 px-4" onclick="window.open('/', '_self');">
+        <i class="fa-regular fa-circle-xmark"></i>
+    </button>
+
+    <!-- Go back -->
+    <button class="gameButton bg-green-400 text-white font-bold py-2 px-4">
+        Ping:
+        <span id="pingLog">
+            <i class="fas fa-spinner fa-spin"></i>
+        </span>
+    </button>
+
 
 </div>
 
@@ -78,6 +130,15 @@
 
     let gameWidth = 350;
     let gameHeight = 350;
+
+    (function() {
+        var width = window.innerWidth || screen.width;
+        var height = window.innerHeight || screen.height;
+
+        gameHeight = height / 2;
+        gameWidth = gameHeight - 2;
+    })()
+
 
     logs.innerText = 'Logs go here';
 
@@ -102,15 +163,18 @@
         let summary = JSON.parse(event.data);
         logs.innerText = JSON.stringify(summary, null, 2);
 
+        // Set ping data
+        let dateSent = new Date(summary.timestamp);
+        let pingMs = new Date() - dateSent;
+        if (pingMs < 1) {
+            pingMs = '<1';
+        }
+        pingLog.innerText = pingMs + 'ms';
+
         let blockWidth = gameWidth / summary.mapWidth;
         let blockHeight = gameHeight / summary.mapHeight;
 
         // Draw map first
-        //for (let x = 0; x < summary.mapWidth; ++x) {
-        //    for (let y = 0; y < summary.mapHeight; ++y) {
-        //        drawBlock(x, y, blockWidth, blockHeight, 'green');
-        //    }
-        //}
         drawBlock(0, 0, gameWidth, gameHeight, 'green');
 
         // Draw snakes
@@ -118,10 +182,16 @@
 
             let p = summary.players[i];
             
-            for (let j = 0; j < p.positions.length; ++j) {
+            // Draw body
+            for (let j = 1; j < p.positions.length; ++j) {
                 let pos = p.positions[j];
                 drawBlock(pos.x, pos.y, blockWidth, blockHeight, p.color);
             }
+
+            // Draw head
+            let isPlayer = p.username == username;
+            let pos_0 = p.positions[0];
+            drawBlock(pos_0.x, pos_0.y, blockWidth, blockHeight, p.color, isPlayer);
 
             drawEyes(p.positions[0].x, p.positions[0].y, blockWidth, blockHeight, p.direction);
         }
@@ -133,7 +203,6 @@
 
             for (let j = 0; j < p.positions.length; ++j) {
                 let pos = p.positions[j];
-                //drawBlock(pos.x, pos.y, blockWidth, blockHeight, p.color);
                 drawBlock(pos.x, pos.y, blockWidth, blockHeight, 'gray');
             }
 
@@ -155,7 +224,7 @@
     gameCanvas.height = gameHeight;
     let ctx = gameCanvas.getContext('2d');
 
-    function drawBlock(xCoord, yCoord, width, height, color) {
+    function drawBlock(xCoord, yCoord, width, height, color, isPlayer) {
         
         //// Draw border
         //ctx.fillStyle = 'black';
@@ -165,6 +234,10 @@
         //ctx.fillRect(xCoord * width + 1, yCoord * height + 1, width - 1, height - 1);
 
         // Draw block
+        if (isPlayer === true) {
+            ctx.fillStyle = 'red';
+            ctx.fillRect(xCoord * width - 2, yCoord * height - 2, width + 4, height + 4);
+        }
         ctx.fillStyle = color;
         ctx.fillRect(xCoord * width, yCoord * height, width, height);
     }
@@ -217,13 +290,6 @@
 
     // On load
     document.addEventListener('DOMContentLoaded', function() {
-
-        gameCanvasContainer.style.width = (gameWidth + 110) + 'px';
-
-        bUp.style.width = (gameWidth + 103) + 'px';
-        bDown.style.width = (gameWidth + 103) + 'px'
-        bLeft.style.height = gameHeight + 'px';
-        bRight.style.height = gameHeight + 'px';
 
         bUp.onclick = bDown.onclick = bLeft.onclick = bRight.onclick = function(event) {
             let button = event.target;
