--- a/tps_game/Views/Shared/_Layout.cshtml
+++ b/tps_game/Views/Shared/_Layout.cshtml
@@ -17,5 +17,36 @@
 
     @RenderBody()
 
+    <script>
+
+        function deleteAllCookies() {
+            const cookies = document.cookie.split(";");
+
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i];
+                const eqPos = cookie.indexOf("=");
+                const name = eqPos > -1 ? cookie.substr(0, eqPos) : cookie;
+                document.cookie = name + "=;expires=Thu, 01 Jan 1970 00:00:00 GMT";
+            }
+        }
+
+        function onLoad() {
+
+            // If username not found, reset everything
+            let cachedToken = sessionStorage.getItem('token');
+            if (!cachedToken) {
+                localStorage.clear();
+                sessionStorage.clear();
+                deleteAllCookies();
+                window.location.reload();
+            }
+        }
+        onLoad();
+
+        function onRender() {
+        }
+
+        document.addEventListener('DOMContentLoaded', onRender);
+    </script>
 </body>
 </html>
