TODO: implement new SQLite

--- a/tps_game/Views/Game/Snake.cshtml
+++ b/tps_game/Views/Game/Snake.cshtml
@@ -210,6 +210,8 @@
 
     function toggleHighScores()
     {
+        return;
+
         highScores.classList.toggle('hidden');
         highScoresTable.classList.toggle('opacity-50');
 
