--- a/tps_game/Views/Authorization/Login.cshtml
+++ b/tps_game/Views/Authorization/Login.cshtml
@@ -55,15 +55,15 @@
                                     <label for="remember" class="text-gray-500">Remember me</label>
                                 </div>
                             </div>
-                            @*<a href="#" class="text-sm font-medium text-blue-600 hover:underline">Forgot password?</a>*@
+                            <a href="/Authorization/ForgotPassword" class="text-sm font-medium text-blue-600 hover:underline">Forgot password?</a>
                         </div>
                         <button id="login_b" onclick="login()" class="w-full text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
                             Sign in
                         </button>
 
-                        @*<p class="text-sm font-light text-gray-500">
-                        Don’t have an account yet? <a href="#" class="font-medium text-blue-600 hover:underline">Sign up</a>
-                        </p>*@
+                        <p class="text-sm font-light text-gray-500">
+                        Don’t have an account yet? <a href="/Authorization/SignUp" class="font-medium text-blue-600 hover:underline">Sign up</a>
+                        </p>
                     </div>
                 </div>
             </div>
